# SpaTiaL

./: .gitignore  CONTRIBUTORS  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
experiments/: README.md  eval_script_stanford_satisfaction.py  planning_grasp.py  planning_push.py  pyproject.toml
experiments/SpaTL_Exp2MoveViolation/: polygon_player.py
experiments/SpaTL_Exp2Perfect2/: polygon_player.py
experiments/SpaTL_Exp2PerfectMovingPassage/: polygon_player.py
experiments/SpaTL_Exp3CoffeScene1/: polygon_player.py
experiments/SpaTL_Exp3CoffeScene2/: polygon_player.py
experiments/SpaTL_Exp3CoffeScene4/: polygon_player.py
experiments/SpaTL_Exp3CoffeScene5/: polygon_player.py  polygons.pkl
experiments/SpaTL_Exp3CoffeScene7/: polygons.pkl
experiments/sim/push/: sim_push.py
experiments/urdf/002_master_chef_can/: model_normalized.extent.txt  model_normalized.normal.npy  model_normalized_chomp.sdf  model_normalized_convex.stl
experiments/urdf/003_cracker_box/: model_normalized.extent.txt  model_normalized.xyz  model_normalized_chomp.pth  model_normalized_convex.stl
experiments/urdf/004_sugar_box/: model_normalized.normal.npy  model_normalized_chomp.pth  model_normalized_chomp.sdf  model_normalized_convex.stl  sampled_point.npy
experiments/urdf/008_pudding_box/: model_normalized.xyz  model_normalized_chomp.pth  sampled_point.npy
experiments/urdf/009_gelatin_box/: model_normalized.normal.npy  model_normalized_convex.stl
experiments/urdf/011_banana/: model_normalized.extent.txt  model_normalized.normal.npy  model_normalized.offset.txt  model_normalized.xyz  model_normalized_chomp.pth  model_normalized_chomp.sdf  sampled_point.npy
experiments/urdf/025_mug/: model_normalized.extent.txt  model_normalized.normal.npy  model_normalized_chomp.pth  model_normalized_chomp.sdf
experiments/urdf/kitchen_walls/: model_normalized.offset.txt
spatial-experiments/: README.md  pyproject.toml
spatial-experiments/experiments/: eval_script_stanford_stats.py  planning_grasp.py  planning_push.py  realsense_blocks.py
spatial-experiments/experiments/SpaTL_Exp2MoveViolation/: polygons.pkl
spatial-experiments/experiments/SpaTL_Exp2PassageViolation/: polygon_player.py  polygons.pkl
spatial-experiments/experiments/SpaTL_Exp2Perfect2/: polygons.pkl
spatial-experiments/experiments/SpaTL_Exp2PerfectMovingPassage/: polygons.pkl
spatial-experiments/experiments/SpaTL_Exp3CoffeScene1/: polygons.pkl
spatial-experiments/experiments/SpaTL_Exp3CoffeScene1-2/: polygons.pkl
spatial-experiments/experiments/SpaTL_Exp3CoffeScene2/: polygons.pkl
spatial-experiments/experiments/SpaTL_Exp3CoffeScene3/: polygon_player.py  (+1 more)
spatial-experiments/stanford/: stanford_eval.py  stanford_test.py
spatial-lib/: README.md  pyproject.toml
spatial-lib/spatial/: automaton_planning.py  geometry.py
spatial-lib/spatial_spec/: automaton_planning.py  logic.py  ltlf2dfa_nx.py  spatial.lark
spatial-lib/tests/: test_automaton.py  test_circles.py  test_ltlf2nxparser.py  test_object_in_time.py  test_polygons.py  test_spatial.py  test_tl.py
(+77 files in other folders)
