[metadata]
name = spatial
version = 0.0.1
author = "Christian Pek, Georg Schuppe"
author_email = "pek2@kth.se, schuppe@kth.se"
description = SpaTiaL is a logical language and tool to specify spatial and temporal relations between objects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/KTH-RPL-Planiacs/SpaTiaL
project_urls =
    Bug Tracker = https://github.com/KTH-RPL-Planiacs/SpaTiaL/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux

[options]
package_dir =
    = spatial
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src