[tool.poetry]
name = "experiments"
version = "0.1.0"
description = "Scripts to reproduce the results of the paper"
authors = ["Georg Schuppe <georg.schuppe@gmail.com>"]
license = "LICENSE"
readme = "README.md"

[tool.poetry.scripts]
planning_grasp = "planning_grasp:main"

[tool.poetry.dependencies]
python = "^3.8"
spatial-spec = "^0.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
